--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [lib]
 name = "rkl"
-path = "./lib/mod.rs"
+path = "./src/lib.rs"
 
 [dependencies]
 ndarray = { version = "0.15.6", features = ["serde"] }
@@ -15,3 +15,7 @@ serde = { version = "1.0.145", features = ["derive"] }
 bincode = "1.3.3"
 savefile="0.11"
 savefile-derive="0.11"
+
+[[bin]]
+name="main"
+path="./example/main.rs"
