--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,11 @@ savefile="0.11"
 savefile-derive="0.11"
 plotters = "0.3.7"
 colorous = "1.0.6"
+ndarray-linalg = "0.16"
+blas-src = { version = "0.8", features = ["openblas"] }
+openblas-src = { version = "0.10", features = ["system"] }
+lapack-src = { version = "0.10.0", features = ["system"] }
+
 
 [[bin]]
 name="main"
