--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,12 +24,23 @@ colorous = "1.0.15"
 nalgebra = "0.33.2"
 fastapprox = "0.3.1"
 rayon = "1.8"
+#eframe = "0.29.1"
+#egui_extras = "0.29.1"
+#egui = "0.29.1"
+#egui_plot = "0.29"
 #blas-src = { version = "0.10", features = ["openblas"] }
 autograd = "1.1.1"
 #ndarray-linalg = { version = "0.16", features = ["netlib-static"] }
 #blas-src = { version = "0.8", features = ["openblas"] }
 #openblas-src = { version = "0.10", features = ["system"] }
 #lapack-src = { version = "0.10.0", features = ["system"] }
+
+csv = "1.3.1"
+
+
+#kiss3d = "0.35"
+#egui-winit = "0.23"
+#egui-kiss3d = "0.1.0"
 
 
 # [[bin]]
@@ -39,3 +50,7 @@ autograd = "1.1.1"
 [[bin]]
 name = "main_benchmark"
 path = "./example/main_1Dbenchmark.rs"
+
+#[[bin]]
+#name = "gui"
+#path = "./src/gui/testkiss3d.rs"
