--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,30 +21,20 @@ savefile="0.18.5"
 savefile-derive="0.18.5"
 plotters = "0.3.7"
 colorous = "1.0.15"
-# nalgebra = "0.33.2"
-nalgebra = "0.32"
-nalgebra-blas = { version = "0.32", features = ["openblas"] }  # or "intel-mkl" or "openblas"
-blas-src = { version = "0.9", features = ["netlib"] }  # or "intel-mkl" or "openblas"
-
+nalgebra = "0.33.2"
+faer = "0.21.3"
 fastapprox = "0.3.1"
 rayon = "1.8"
 #eframe = "0.29.1"
 #egui_extras = "0.29.1"
 #egui = "0.29.1"
 #egui_plot = "0.29"
-#blas-src = { version = "0.10", features = ["openblas"] }
-autograd = "1.1.1"
-#ndarray-linalg = { version = "0.16", features = ["netlib-static"] }
-#blas-src = { version = "0.8", features = ["openblas"] }
-#openblas-src = { version = "0.10", features = ["system"] }
-#lapack-src = { version = "0.10.0", features = ["system"] }
+#autograd = "1.1.1"
 
 csv = "1.3.1"
 
-
-#kiss3d = "0.35"
-#egui-winit = "0.23"
-#egui-kiss3d = "0.1.0"
+#[profile.dev.package.faer]
+#opt-level = 3
 
 
 # [[bin]]
